# camon

./: .gitignore  Cargo.toml  README.md  config.toml.example
.github/workflows/: ci.yml  release.yml
docs/: Makefile  zola.toml
docs/content/: _index.md
docs/templates/: base.html  index.html  page.html  section.html
src/: config.rs  install.rs  lib.rs  main.rs  update.rs
src/analytics/: decoder.rs  mod.rs  motion.rs  object.rs  pipeline.rs
src/api/: hls.rs  mod.rs  server.rs
src/assets/: app.js  index.html  style.css
src/buffer/: hot.rs  mod.rs  segment.rs  warm.rs
src/camera/: mod.rs  rtsp.rs
src/storage/: detection_store.rs  mod.rs  store.rs  warm_index.rs
