[package]
name = "camon"
version = "0.1.0"
edition = "2021"

[dependencies]
gstreamer = "0.24"
gstreamer-app = "0.24"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
