[package]
name = "camon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
rust-embed = "8"
mime_guess = "2"
serde_json = "1"
