[package]
name = "camon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
rust-embed = "8"
mime_guess = "2"
serde_json = "1"
opencv = { version = "0.98.1", features = ["clang-runtime"] }
ort = { version = "2.0.0-rc.11", features = ["download-binaries", "fetch-models"] }
ndarray = "0.17.2"
